@@ -17,6 +17,21 @@ PORTRAIT_SIZE = (300, 300,)
 PORTRAIT_THUMBNAIL_SIZE = (100, 100,)
 
 
+def safe_transform(context, text, mt='text/x-html-safe'):
+    """Use the safe_html transform to protect text output. This also
+    ensures that resolve UID links are transformed into real links.
+    """
+    # Portal transforms needs encoded strings
+    if not isinstance(text, unicode):
+        text = unicode(text, 'utf-8', 'ignore')
+    text = text.encode('utf-8')
+    transformer = getToolByName(context, 'portal_transforms')
+    data = transformer.convertTo(mt, text,
+                                 context=context, mimetype='text/html')
+    result = data.getData()
+    return result
+
+
 class MemberData(BaseMemberData):
     """This is a catalog-aware MemberData. We add functions to allow the
     catalog to index member data.
@@ -56,14 +71,16 @@ class MemberData(BaseMemberData):
 
     security.declareProtected(View, 'SearchableText')
     def SearchableText(self):
+        description = safe_transform(
+            self, self.getProperty('description') or '', 'text/plain')
         return ' '.join([self.getProperty('fullname') or '',
                          self.getProperty('email') or '',
                          self.getProperty('position') or '',
                          self.getProperty('department') or '',
                          self.getProperty('location') or '',
-                         self.getProperty('description') or '',
                          self.getProperty('phone') or '',
-                         self.getProperty('mobile') or ''])
+                         self.getProperty('mobile') or '',
+                         description or ''])
 
 InitializeClass(MemberData)
 
@@ -122,6 +139,8 @@ class MembershipTool(BaseMembershipTool):
         memberinfo['position'] = member.getProperty('position')
         memberinfo['department'] = member.getProperty('department')
         memberinfo['birth_date'] = member.getProperty('birth_date')
+        memberinfo['description'] = safe_transform(
+            self, member.getProperty('description') or '')
         return memberinfo
 
     def changeMemberPortrait(self, portrait, id=None):
